# SFML-Pong

./: CMakeLists.txt  README.md  main  main.cpp  pong3.kdev4  shell.nix
.kdev4/: pong3.kdev4
SFML-2.6.0-macos-clang-arm64/html/: classsf_1_1Keyboard-members.html  deprecated.html  functions_b.html  functions_eval_b.html
SFML-2.6.0-macos-clang-arm64/html/search/: all_0.js  all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_b.js  all_d.js  all_e.js  all_f.js  enumvalues_1.js  enumvalues_d.js  functions_10.js  functions_6.js  functions_d.js
SFML-2.6.0-macos-clang-arm64/lib/: libsfml-audio.2.6.0.dylib  libsfml-graphics.2.6.0.dylib  libsfml-network.2.6.0.dylib  libsfml-system.2.6.0.dylib  libsfml-window.2.6.0.dylib
git/: .gitignore
images/: 5619920.ai  5619925.eps
images/Tilemaps/: Tilesets_banner.aseprite  Tilesets_cover.aseprite
images/Tilemaps/Aseprite Files/: metal_snow_tileset.aseprite  rock_ice_alt_tileset_1.aseprite  rock_ice_alt_tileset_2.aseprite  rock_ice_alt_tileset_3.aseprite  rock_ice_alt_tileset_4.aseprite  rock_ice_alt_tileset_5.aseprite  rock_ice_tileset.aseprite  sandbrick_grass_alt_tileset_1.aseprite  sandbrick_grass_alt_tileset_2.aseprite  sandbrick_grass_alt_tileset_3.aseprite  sandbrick_grass_tileset.aseprite  stone_drygrass_alt_tileset_1.aseprite  stone_drygrass_alt_tileset_2.aseprite  wood_moss_alt_tileset_1.aseprite  wood_moss_alt_tileset_2.aseprite  wood_moss_alt_tileset_3.aseprite  wood_moss_alt_tileset_4.aseprite  wood_moss_tileset.aseprite
(+16 files in other folders)
